Remove unnescessary JSX and VNode type imports Run deno fmt Update Readme with updated examples and regex

--- a/deno.json
+++ b/deno.json
@@ -1,3 +1,8 @@
 {
-  "importMap": "./import_map.json"
+  "importMap": "./import_map.json",
+  "fmt": {
+    "files": {
+      "exclude": ["README.md"]
+    }
+  }
 }
